--- a/aula006/ex003.html
+++ b/aula006/ex003.html
@@ -20,6 +20,8 @@
     <p>caso eu queira so calculos com numeros, interos, posso usar parseint, e para ele reconhecer de forma automatica, usar apenas o Number (n)</p>
     <h2>também posso converter de string para numero, posso usar string n </h2>
     <h2>OBS: contenação se resume, em o + para fazer as somas de valores no js.</h2>
+    <p>e para contenação devo sempre, usa o var em meio de aspas simples '' e ao final da segunda aspa, eu boto uma , e por fora dela + minha var q crei</p>
+    <h2>lembrando que tem uma forma mais morderna e simples, para usar a contenação, para isso basta usar ${var} essa tag, com o nome da var q criei dentro das chaves.</h2>
 
 
 </body>
