--- a/aula006/ex004.html
+++ b/aula006/ex004.html
@@ -9,10 +9,37 @@
     body{
         background-color: beige;
     }
+    ul li{
+        font-weight: bold;
+        font-size: 2em;
+        font-family: Arial, Helvetica, sans-serif;
+        text-transform: uppercase;
+        color: aliceblue;
+    }
+    div{
+        background-color: rgb(55, 53, 53);
+        border-radius: 10px ;
+        padding: 10px;
+    }
 </style>
 <body>
     <h1>Com um  document.write (`seu nome tem ${nome.length} letras`) posso fazer uma resposta, para nomes, como a quantidade de letras que o nome possui</h1>
     <h2>msotar uma reposta, como seria o nome em maisculo, como o toLocaleUpperCase e como o nome seria minusculo, com toLocaleLowerCase</h2>
+    <h1>Operadores  de javascript.</h1>
+    <div>
+        <ul>
+            <li> maior > </li>
+            <li>menor < </li>
+            <li>recebe = </li>
+            <li> igual == </li>
+            <li>indentico === </li>
+            <li> não igual != </li>
+            <li>negagação !</li>
+            <li>conjunção &&</li>
+            <li>diskunção ||</li>
+            <li>ternarios :?</li>
+        </ul>
+    </div>
     
 </body>
 <script>
