--- a/aula009/dom.html
+++ b/aula009/dom.html
@@ -29,19 +29,16 @@
 <body>
     <h1>Aprendendo trabalhar com<strong> DOM</strong> JS.</h1>
     <p>aqui vai o resultado</p>
-    <div class="msg">click em mim</div>
+    <div id="msg">click em mim</div>
     <article>
      
 
     </article>
     <script>
         var corpo = window.document.body
-        var p1 = window.document.getElementById('p')[1]
-
-var d = window.document.querySelector('div.msg')
-d.style.backgound = 'red'
-
-
+   var p1 = window.document.body.getElementsByTagName('div#msg')[0]
+   window.document.write(p1.innerText)
+  corpo.style.color = 'black'
 
     </script>
     
