--- a/aula009/dom.html
+++ b/aula009/dom.html
@@ -36,7 +36,7 @@
     </article>
     <script>
         var corpo = window.document.body
-   var p1 = window.document.body.getElementsByTagName('div#msg')[0]
+   var p1 = window.document.body.getElementsByTagName('p1')[0]
    window.document.write(p1.innerText)
   corpo.style.color = 'black'
 
