--- a/aula010/ex007.html
+++ b/aula010/ex007.html
@@ -16,9 +16,9 @@
 </head>
 <body>
     <h1>somando valores</h1>
-    <input type="number" name="ntxtn1" id="txtn1"> +
+    <input type="number" name="txtn1" id="txtn1"> +
 
-    <input type="number" name="ntxtn2" id="txtn2">
+    <input type="number" name="txtn2" id="txtn2">
 
     <input type="button" value="somar" onclick="somar()">
 
@@ -35,7 +35,7 @@
         var n1 = Number (tn1.value)
         var n2 = Number (tn2.value)
         var s = n1 + n2
-        res.innerHTML `a soma entre ${n1} e ${n2} e igual a ${s}`
+        res.innerHTML`a soma entre ${n1} e ${n2} e igual a ${s}`
     }
     
 </script>
