--- a/aula011/ex011.html
+++ b/aula011/ex011.html
@@ -18,8 +18,9 @@ function calcular(){
         var pais = window.document.getElementById('lug')
         var res = window.document.getElementById('res')
         var brasil = 'brasileiro'
-        var paises = 'estrangeiro'
         var res
+        res.innerHTML = (`você nasceu no brasil, então vocé é ${brasil}`)
+        
      
     }
 
