--- a/aula012ex/modelo/modelo.html
+++ b/aula012ex/modelo/modelo.html
@@ -19,7 +19,7 @@
 
         </div>
         <div id="foto">
-            <img src="../imagens/img manã.jpg" alt="manha" id="imagem">
+           <img src="" alt="">
         
 
         </div>
