--- a/aula012ex/ex014/modelo.html
+++ b/aula012ex/ex014/modelo.html
@@ -13,7 +13,7 @@
     </header>
     <section>
         <div>
-            <img src="../imagens/img noite.jpg" alt="noite">
+          <img src="" alt="">
 
         </div>
         <div>
