--- a/aula012ex/modelo/modelo.html
+++ b/aula012ex/modelo/modelo.html
@@ -19,7 +19,7 @@
 
         </div>
         <div id="foto">
-           <img src="" alt="">
+           <img src="../imagens/tarde.jpg" alt="tarde">
         
 
         </div>
