--- a/ex014/modeloex012.html
+++ b/ex014/modeloex012.html
@@ -18,7 +18,7 @@
           </p>
           <p> sexo:
             <input type="radio" name="radsex" id="mas">
-            <label for="masc">masculino</label>
+            <label for="mas">masculino</label>
             <input type="radio" name="radsex" id="fem">
             <label for="fem">feminino</label>
           </p>
