--- a/aula012ex/modelo/modelo.html
+++ b/aula012ex/modelo/modelo.html
@@ -19,7 +19,7 @@
 
         </div>
         <div id="foto">
-           <img src="../imagens/noite.jpg" alt="tarde">
+          <img id="imagem" src="tarde.jpg" alt="tarde">
         
 
         </div>
