--- a/ex018/modeloex018.html
+++ b/ex018/modeloex018.html
@@ -19,7 +19,7 @@
 
           <br><br><select name="flista" id="flista" size="6"></select>
 
-         <br><br><input type="button" value="finalizar">
+         <br><br><input type="button" value="finalizar" onclick="finalizar()">
 
         
         
