--- a/aula012/index.html
+++ b/aula012/index.html
@@ -38,7 +38,7 @@
            text-align: center;
             border: solid 3px rgba(0, 0, 0, 0.182);
             box-shadow: 3px 2px 3px rgba(0, 0, 0, 0.243);
-            height:100px;
+            height: 150px;
            
         }
           li a{
@@ -196,7 +196,7 @@
         var menu = document.getElementById('itens')
       
        if (menu.style.display == ('none')){
-        menu.style.display = 'flex'
+        menu.style.display = 'block'
        }else{
         menu.style.display = 'none'
        }
